Refactor and enhance Car Game: Improved styling and responsiveness, added welcome message, road edges, and ensured car stays within road boundaries

--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
       content="JavaScript Racing - A fun racing game built with JavaScript" />
   </head>
   <body>
-    <h1>Welcome to the Car Game</h1>
     <div class="container">
-      <div class="score"></div>
+      <div class="score">
+        <p>Welcome to the Car Game 🚗🏁</p>
+      </div>
       <div class="game">
         <button class="start">Start</button>
-        <div class="gameArea"></div>
+        <div class="gameArea">
+          <div class="edge left"></div>
+          <div class="edge right"></div>
+        </div>
       </div>
       <div id="pauseScreen" class="pauseScreen hide">
         <h2>Game Paused</h2>
